fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
+html {
+    display: flex;
+    height: 100vh;
+}
 body {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
+    max-height: 100vh;
+    width: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    flex-grow: 1;
+    background-color: darkcyan;
 }
 
 #board{
